--- a/src/components/Form/Label/Label.module.css
+++ b/src/components/Form/Label/Label.module.css
@@ -1,3 +1,4 @@
 .label {
+  align-items: center;
   margin-bottom: 0.3em;
 }
